--- a/header-tracker/index.html
+++ b/header-tracker/index.html
@@ -64,7 +64,9 @@
                     <a href="/products/">Products</a>
                     <a href="/tools/">Tools</a>
                     <a href="/about/">About</a>
-                    <a href="/" class="btn-primary">Get Early Access</a>
+                    <button class="btn-primary" onclick="showEmailModal()">
+                        Get Early Access
+                    </button>
                 </div>
                 <button
                     class="hamburger"
@@ -95,7 +97,15 @@
                 <a href="/privacy/">Privacy Policy</a>
             </nav>
             <div class="side-panel-cta">
-                <a href="/" class="btn-primary">Get Early Access</a>
+                <button
+                    class="btn-primary"
+                    onclick="
+                        showEmailModal();
+                        closeSidePanel();
+                    "
+                >
+                    Get Early Access
+                </button>
             </div>
         </aside>
 
@@ -106,7 +116,9 @@
                 Automatically calculate header sizes, prop counts, couplers, and
                 rental durations. Built specifically for masonry subcontractors.
             </p>
-            <a href="/" class="btn-primary">Open Header Tracker</a>
+            <button class="btn-primary" onclick="showEmailModal()">
+                Open Header Tracker
+            </button>
         </section>
 
         <!-- Features Section -->
@@ -150,7 +162,101 @@
             <div class="container">
                 <h2>Plan Headers in Minutes, Not Hours</h2>
                 <p>Get accurate counts for your next masonry job</p>
-                <a href="/" class="btn-primary">Get Early Access</a>
+                <button class="btn-primary btn-lg" onclick="showEmailModal()">
+                    Get Early Access
+                </button>
+            </div>
+        </section>
+
+        <!-- Modal -->
+        <div
+            id="emailModal"
+            class="modal-overlay"
+            onclick="closeModalOnOverlay(event)"
+        >
+            <div class="modal-content" onclick="event.stopPropagation()">
+                <button class="modal-close" onclick="closeEmailModal()">
+                    &times;
+                </button>
+                <h3 class="modal-title">Request Early Access</h3>
+                <form id="waitlistForm" onsubmit="handleSubmit(event)">
+                    <div class="form-group">
+                        <label class="form-label" for="name">Full Name</label>
+                        <input
+                            class="form-input"
+                            type="text"
+                            id="name"
+                            name="name"
+                            required
+                            placeholder="John Smith"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="email"
+                            >Email Address</label
+                        >
+                        <input
+                            class="form-input"
+                            type="email"
+                            id="email"
+                            name="email"
+                            required
+                            placeholder="john@company.com"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label" for="company"
+                            >Company Name (Optional)</label
+                        >
+                        <input
+                            class="form-input"
+                            type="text"
+                            id="company"
+                            name="company"
+                            placeholder="Your Company"
+                        />
+                    </div>
+                    <button type="submit" class="btn-primary w-full">
+                        Request Access
+                    </button>
+                    <div id="successMessage" class="success-message">
+                        Thanks! We'll be in touch soon.
+                    </div>
+                    <p class="form-note">
+                        We'll personally reach out with your invite link
+                    </p>
+                </form>
+            </div>
+        </div>
+
+        <!-- Related Tools -->
+        <section class="section">
+            <div class="container">
+                <h2 class="section-title">Related Tools</h2>
+                <div class="grid-2" style="max-width: 800px; margin: 0 auto">
+                    <a
+                        href="/spec-analyzer/"
+                        class="card"
+                        style="text-decoration: none; color: inherit"
+                    >
+                        <h3>Spec Analyzer</h3>
+                        <p>
+                            Upload spec PDFs and extract Division 04, 07
+                            requirements in minutes.
+                        </p>
+                    </a>
+                    <a
+                        href="/tool-tracker/"
+                        class="card"
+                        style="text-decoration: none; color: inherit"
+                    >
+                        <h3>Tool Tracker</h3>
+                        <p>
+                            Check-in/check-out system for tools and equipment
+                            across jobs.
+                        </p>
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -198,8 +304,47 @@
                 document.body.style.overflow = "";
             }
             document.addEventListener("keydown", (e) => {
-                if (e.key === "Escape") closeSidePanel();
+                if (e.key === "Escape") {
+                    closeSidePanel();
+                    closeEmailModal();
+                }
             });
+
+            function showEmailModal() {
+                document.getElementById("emailModal").classList.add("show");
+            }
+
+            function closeEmailModal() {
+                document.getElementById("emailModal").classList.remove("show");
+            }
+
+            function closeModalOnOverlay(event) {
+                if (event.target.id === "emailModal") {
+                    closeEmailModal();
+                }
+            }
+
+            function handleSubmit(event) {
+                event.preventDefault();
+                const name = document.getElementById("name").value;
+                const email = document.getElementById("email").value;
+                const company = document.getElementById("company").value;
+                const subject = encodeURIComponent(
+                    "PM4Subs Early Access Request",
+                );
+                const body = encodeURIComponent(
+                    `New early access request:\n\nName: ${name}\nEmail: ${email}\nCompany: ${company || "Not provided"}\n`,
+                );
+                window.location.href = `mailto:hello@pm4subs.com?subject=${subject}&body=${body}`;
+                document.getElementById("successMessage").style.display =
+                    "block";
+                document.getElementById("waitlistForm").reset();
+                setTimeout(() => {
+                    closeEmailModal();
+                    document.getElementById("successMessage").style.display =
+                        "none";
+                }, 2000);
+            }
         </script>
     </body>
 </html>
