Update screenshots to compressed webp versions

--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Twitter -->
@@ -41,7 +41,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Tailwind CSS CDN -->
