--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -27,7 +27,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Twitter -->
@@ -42,7 +42,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Tailwind CSS CDN -->
