--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Twitter -->
@@ -39,7 +39,7 @@
         />
         <meta
             name="twitter:image"
-            content="https://pm4subs.com/screenshots/projects-dashboard.png"
+            content="https://pm4subs.com/screenshots/projects-dashboard.webp"
         />
 
         <!-- Tailwind CSS CDN -->
@@ -81,7 +81,7 @@
                         "description": "Project management software built by a subcontractor, for subcontractors. Track bids, jobs, specs, field tasks, and tools in one place.",
                         "logo": {
                             "@type": "ImageObject",
-                            "url": "https://pm4subs.com/screenshots/projects-dashboard.png"
+                            "url": "https://pm4subs.com/screenshots/projects-dashboard.webp"
                         },
                         "founder": {
                             "@type": "Person",
@@ -465,7 +465,7 @@
                     <div class="mobile-column">
                         <div class="screenshot-card">
                             <img
-                                src="screenshots/mobile-camera.png"
+                                src="screenshots/mobile-command-center.webp"
                                 alt="Mobile dashboard with camera button"
                             />
                             <div class="screenshot-caption">
@@ -481,7 +481,7 @@
                     <div class="desktop-column">
                         <div class="screenshot-card">
                             <img
-                                src="screenshots/projects-dashboard.png"
+                                src="screenshots/projects-dashboard.webp"
                                 alt="Active jobs dashboard"
                             />
                             <div class="screenshot-caption">
@@ -495,7 +495,7 @@
 
                         <div class="screenshot-card">
                             <img
-                                src="screenshots/photo-gallery.png"
+                                src="screenshots/photo-gallery.webp"
                                 alt="Photo gallery with filters"
                             />
                             <div class="screenshot-caption">
@@ -509,7 +509,7 @@
 
                         <div class="screenshot-card">
                             <img
-                                src="screenshots/proposals-dashboard.png"
+                                src="screenshots/proposal-dashboard.webp"
                                 alt="Proposals organized by status"
                             />
                             <div class="screenshot-caption">
