Add command center screenshot with issue alert caption

--- a/index.html
+++ b/index.html
@@ -520,6 +520,20 @@
                                 </p>
                             </div>
                         </div>
+
+                        <div class="screenshot-card">
+                            <img
+                                src="screenshots/command-center.webp"
+                                alt="Command center with issue alerts"
+                            />
+                            <div class="screenshot-caption">
+                                <h4>Command Center</h4>
+                                <p>
+                                    See everything at a glance. Red borders
+                                    alert you to issues that need attention.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
