Add Spec Analyzer to main nav and update Try button to link to login

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
                 >
                 <div class="nav-links">
                     <a href="/products/">Products</a>
+                    <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
                     <a href="/tools/">Tools</a>
                     <a href="/about/">About</a>
                     <button class="btn-primary" onclick="showEmailModal()">
@@ -254,6 +255,7 @@
                 <span class="nav-section-title">Navigate</span>
                 <a href="/">Home</a>
                 <a href="/products/">Products</a>
+                <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
                 <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
 
