--- a/spec-analyzer/index.html
+++ b/spec-analyzer/index.html
@@ -60,6 +60,7 @@
                 <a href="/" class="nav-logo">PM4Subs</a>
                 <div class="nav-links">
                     <a href="/products/">Products</a>
+                    <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
                     <a href="/tools/">Tools</a>
                     <a href="/about/">About</a>
                     <button class="btn-primary" onclick="showEmailModal()">
@@ -85,6 +86,7 @@
                 <span class="nav-section-title">Navigate</span>
                 <a href="/">Home</a>
                 <a href="/products/">Products</a>
+                <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
                 <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
 
@@ -115,9 +117,9 @@
                 Analyzer extracts Division 00, 01, 04, and 07 requirements in
                 minutes, not hours.
             </p>
-            <button class="btn-primary" onclick="showEmailModal()">
+            <a href="https://specs.pm4subs.com/login" class="btn-primary">
                 Try the Spec Analyzer
-            </button>
+            </a>
         </section>
 
         <!-- Features Section -->
