Fix Spec Analyzer nav to go to landing page instead of app

--- a/spec-analyzer/index.html
+++ b/spec-analyzer/index.html
@@ -60,7 +60,7 @@
                 <a href="/" class="nav-logo">PM4Subs</a>
                 <div class="nav-links">
                     <a href="/products/">Products</a>
-                    <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
+                    <a href="/spec-analyzer/">Spec Analyzer</a>
                     <a href="/tools/">Tools</a>
                     <a href="/about/">About</a>
                     <button class="btn-primary" onclick="showEmailModal()">
@@ -86,7 +86,7 @@
                 <span class="nav-section-title">Navigate</span>
                 <a href="/">Home</a>
                 <a href="/products/">Products</a>
-                <a href="https://specs.pm4subs.com/">Spec Analyzer</a>
+                <a href="/spec-analyzer/">Spec Analyzer</a>
                 <a href="/tools/">Tools</a>
                 <a href="/about/">About</a>
 
