Update spec analyzer heading - not instant, in minutes

--- a/spec-analyzer/index.html
+++ b/spec-analyzer/index.html
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="feature-grid">
                     <div class="card">
-                        <h2>Instant PDF Spec Analysis</h2>
+                        <h2>PDF Spec Analysis in Minutes</h2>
                         <p>
                             Upload any spec PDF and instantly pull out
                             materials, accessories, submittal requirements,
