Add Home link to main nav

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                     ><span class="subs">Subs</span></a
                 >
                 <div class="nav-links">
+                    <a href="/">Home</a>
                     <a href="/products/">Products</a>
                     <a href="/spec-analyzer/">Spec Analyzer</a>
                     <a href="/tools/">Tools</a>
