--- a/spec-analyzer/index.html
+++ b/spec-analyzer/index.html
@@ -59,6 +59,7 @@
             <div class="nav-container">
                 <a href="/" class="nav-logo">PM4Subs</a>
                 <div class="nav-links">
+                    <a href="/">Home</a>
                     <a href="/products/">Products</a>
                     <a href="/spec-analyzer/">Spec Analyzer</a>
                     <a href="/tools/">Tools</a>
