--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <!-- Design System -->
         <link rel="stylesheet" href="design-system.css" />
 
+        <!-- Shared Header -->
+        <script src="shared-header.js"></script>
+
         <!-- Brand Logo Styling -->
         <style>
             /* Brand Nav Styling */
@@ -220,64 +223,9 @@
         </script>
     </head>
     <body>
-        <!-- Navigation -->
-        <nav class="nav">
-            <div class="nav-container">
-                <a href="/" class="nav-logo"
-                    ><span class="pm">PM</span><span class="four">4</span
-                    ><span class="subs">Subs</span></a
-                >
-                <div class="nav-links">
-                    <a href="/">Home</a>
-                    <a href="/products/">Products</a>
-                    <a href="/spec-analyzer/">Spec Analyzer</a>
-                    <a href="/tools/">Tools</a>
-                    <a href="/about/">About</a>
-                    <button class="btn-primary" onclick="showEmailModal()">
-                        Get Early Access
-                    </button>
-                </div>
-                <button
-                    class="hamburger"
-                    onclick="toggleSidePanel()"
-                    aria-label="Toggle menu"
-                >
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-            </div>
-        </nav>
-
-        <!-- Side Panel -->
-        <div class="side-panel-overlay" onclick="closeSidePanel()"></div>
-        <aside class="side-panel">
-            <nav class="side-panel-nav">
-                <span class="nav-section-title">Navigate</span>
-                <a href="/">Home</a>
-                <a href="/products/">Products</a>
-                <a href="/spec-analyzer/">Spec Analyzer</a>
-                <a href="/tools/">Tools</a>
-                <a href="/about/">About</a>
-
-                <span class="nav-section-title">Free Tools</span>
-                <a href="/image-compressor/">Image Compressor</a>
-
-                <span class="nav-section-title">Legal</span>
-                <a href="/privacy/">Privacy Policy</a>
-            </nav>
-            <div class="side-panel-cta">
-                <button
-                    class="btn-primary"
-                    onclick="
-                        showEmailModal();
-                        closeSidePanel();
-                    "
-                >
-                    Get Early Access
-                </button>
-            </div>
-        </aside>
+        <script>
+            initHeader();
+        </script>
 
         <!-- Hero Section -->
         <div class="hero-wrapper">
@@ -938,41 +886,6 @@
                     document.getElementById("successMessage").style.display =
                         "none";
                 }, 2000);
-            }
-
-            // Close modal with Escape key
-            document.addEventListener("keydown", (e) => {
-                if (e.key === "Escape") {
-                    closeEmailModal();
-                    closeSidePanel();
-                }
-            });
-
-            // Side panel functions
-            function toggleSidePanel() {
-                const sidePanel = document.querySelector(".side-panel");
-                const overlay = document.querySelector(".side-panel-overlay");
-                const hamburger = document.querySelector(".hamburger");
-
-                sidePanel.classList.toggle("open");
-                overlay.classList.toggle("show");
-                hamburger.classList.toggle("active");
-                document.body.style.overflow = sidePanel.classList.contains(
-                    "open",
-                )
-                    ? "hidden"
-                    : "";
-            }
-
-            function closeSidePanel() {
-                const sidePanel = document.querySelector(".side-panel");
-                const overlay = document.querySelector(".side-panel-overlay");
-                const hamburger = document.querySelector(".hamburger");
-
-                sidePanel.classList.remove("open");
-                overlay.classList.remove("show");
-                hamburger.classList.remove("active");
-                document.body.style.overflow = "";
             }
         </script>
     </body>
