Integrate Resend email for waitlist signups via Supabase edge function

--- a/tool-tracker/index.html
+++ b/tool-tracker/index.html
@@ -246,26 +246,60 @@
                 }
             }
 
-            function handleSubmit(event) {
+            async function handleSubmit(event) {
                 event.preventDefault();
+                const submitBtn = event.target.querySelector(
+                    'button[type="submit"]',
+                );
+                const originalText = submitBtn.textContent;
+                submitBtn.textContent = "Submitting...";
+                submitBtn.disabled = true;
+
                 const name = document.getElementById("name").value;
                 const email = document.getElementById("email").value;
                 const company = document.getElementById("company").value;
-                const subject = encodeURIComponent(
-                    "PM4Subs Early Access Request",
-                );
-                const body = encodeURIComponent(
-                    `New early access request:\n\nName: ${name}\nEmail: ${email}\nCompany: ${company || "Not provided"}\n`,
-                );
-                window.location.href = `mailto:hello@pm4subs.com?subject=${subject}&body=${body}`;
-                document.getElementById("successMessage").style.display =
-                    "block";
-                document.getElementById("waitlistForm").reset();
-                setTimeout(() => {
-                    closeEmailModal();
-                    document.getElementById("successMessage").style.display =
-                        "none";
-                }, 2000);
+
+                try {
+                    const response = await fetch(
+                        "https://muxjcyckyxviqjpmvcri.supabase.co/functions/v1/waitlist-signup",
+                        {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                name,
+                                email,
+                                company,
+                                source: "Tool Tracker Page",
+                            }),
+                        },
+                    );
+                    const data = await response.json();
+                    if (data.success) {
+                        document.getElementById(
+                            "successMessage",
+                        ).style.display = "block";
+                        document.getElementById("waitlistForm").reset();
+                        setTimeout(() => {
+                            closeEmailModal();
+                            document.getElementById(
+                                "successMessage",
+                            ).style.display = "none";
+                        }, 2000);
+                    } else {
+                        alert(
+                            data.error ||
+                                "Something went wrong. Please try again.",
+                        );
+                    }
+                } catch (error) {
+                    console.error("Submission error:", error);
+                    alert(
+                        "Something went wrong. Please try again or email us at hello@pm4subs.com",
+                    );
+                } finally {
+                    submitBtn.textContent = originalText;
+                    submitBtn.disabled = false;
+                }
             }
         </script>
     </body>
