--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -481,27 +481,60 @@
                 }
             }
 
-            function handleModalSubmit(event) {
+            async function handleModalSubmit(event) {
                 event.preventDefault();
+                const submitBtn = event.target.querySelector(
+                    'button[type="submit"]',
+                );
+                const originalText = submitBtn.textContent;
+                submitBtn.textContent = "Submitting...";
+                submitBtn.disabled = true;
+
                 const name = document.getElementById("modalName").value;
                 const email = document.getElementById("modalEmail").value;
                 const company = document.getElementById("modalCompany").value;
-                const subject = encodeURIComponent(
-                    "PM4Subs Early Access Request",
-                );
-                const body = encodeURIComponent(
-                    `New early access request:\n\nName: ${name}\nEmail: ${email}\nCompany: ${company || "Not provided"}\n`,
-                );
-                window.location.href = `mailto:hello@pm4subs.com?subject=${subject}&body=${body}`;
-                document.getElementById("modalSuccessMessage").style.display =
-                    "block";
-                document.getElementById("waitlistForm2").reset();
-                setTimeout(() => {
-                    closeEmailModal();
-                    document.getElementById(
-                        "modalSuccessMessage",
-                    ).style.display = "none";
-                }, 2000);
+
+                try {
+                    const response = await fetch(
+                        "https://muxjcyckyxviqjpmvcri.supabase.co/functions/v1/waitlist-signup",
+                        {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                name,
+                                email,
+                                company,
+                                source: "Image Compressor Page",
+                            }),
+                        },
+                    );
+                    const data = await response.json();
+                    if (data.success) {
+                        document.getElementById(
+                            "modalSuccessMessage",
+                        ).style.display = "block";
+                        document.getElementById("waitlistForm2").reset();
+                        setTimeout(() => {
+                            closeEmailModal();
+                            document.getElementById(
+                                "modalSuccessMessage",
+                            ).style.display = "none";
+                        }, 2000);
+                    } else {
+                        alert(
+                            data.error ||
+                                "Something went wrong. Please try again.",
+                        );
+                    }
+                } catch (error) {
+                    console.error("Submission error:", error);
+                    alert(
+                        "Something went wrong. Please try again or email us at hello@pm4subs.com",
+                    );
+                } finally {
+                    submitBtn.textContent = originalText;
+                    submitBtn.disabled = false;
+                }
             }
 
             // Tab switching
