Add Supabase anon key to waitlist signup forms

--- a/index.html
+++ b/index.html
@@ -876,6 +876,9 @@
                             method: "POST",
                             headers: {
                                 "Content-Type": "application/json",
+                                apikey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im11eGpjeWNreXh2aXFqcG12Y3JpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTkzNDEyMjUsImV4cCI6MjA3NDkxNzIyNX0.GAJomF8rZcrLSQljl6-Imjcv1wKhNxW4AT10V-zURls",
+                                Authorization:
+                                    "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im11eGpjeWNreXh2aXFqcG12Y3JpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTkzNDEyMjUsImV4cCI6MjA3NDkxNzIyNX0.GAJomF8rZcrLSQljl6-Imjcv1wKhNxW4AT10V-zURls",
                             },
                             body: JSON.stringify({
                                 name,
