Fix founder title - still active contractor

--- a/about/index.html
+++ b/about/index.html
@@ -519,7 +519,7 @@
                         <div class="founder-avatar">👷</div>
                         <div class="founder-info">
                             <h3>The Founder</h3>
-                            <span>Former Masonry Contractor</span>
+                            <span>Masonry Contractor</span>
                         </div>
                     </div>
                     <p class="founder-quote">
