Update hero messages - SOV instead of bid, material order thread

--- a/index.html
+++ b/index.html
@@ -278,22 +278,19 @@
                         <div class="message">
                             <div class="sender">Office</div>
                             <div class="text">
-                                The school. Bid's due Thursday
+                                The school. SOV is due Thursday
                             </div>
                         </div>
                         <div class="message">
                             <div class="sender">Office</div>
                             <div class="text">
-                                Also did you see the addendum?
+                                Did you get the material order in for Maple
+                                Street?
                             </div>
                         </div>
                         <div class="message solution">
-                            <div class="sender">PM4Subs</div>
-                            <div class="text">
-                                Riverside Elementary → Budget uploaded
-                                yesterday.<br />Addendum #2 added Jan 7. Bid due
-                                Jan 11.
-                            </div>
+                            <div class="sender">Estimator</div>
+                            <div class="text">It's in PM4Subs.</div>
                         </div>
                     </div>
 
