--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -56,6 +56,13 @@
         <!-- Design System -->
         <link rel="stylesheet" href="../design-system.css" />
 
+        <!-- Cloudflare Turnstile -->
+        <script
+            src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+            async
+            defer
+        ></script>
+
         <!-- Shared Header -->
         <script src="../shared-header.js"></script>
 
