--- a/tool-tracker/index.html
+++ b/tool-tracker/index.html
@@ -53,6 +53,13 @@
         <!-- Design System -->
         <link rel="stylesheet" href="../design-system.css" />
 
+        <!-- Cloudflare Turnstile -->
+        <script
+            src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+            async
+            defer
+        ></script>
+
         <!-- Shared Header -->
         <script src="../shared-header.js"></script>
     </head>
@@ -167,6 +174,11 @@
                             placeholder="Your Company"
                         />
                     </div>
+                    <div
+                        class="cf-turnstile"
+                        data-sitekey="0x4AAAAAACL5Y0yML1b9e4Bc"
+                        data-theme="dark"
+                    ></div>
                     <button type="submit" class="btn-primary w-full">
                         Request Access
                     </button>
@@ -258,6 +270,16 @@
                 const name = document.getElementById("name").value;
                 const email = document.getElementById("email").value;
                 const company = document.getElementById("company").value;
+                const turnstileResponse = document.querySelector(
+                    '[name="cf-turnstile-response"]',
+                )?.value;
+
+                if (!turnstileResponse) {
+                    alert("Please complete the security check.");
+                    submitBtn.textContent = originalText;
+                    submitBtn.disabled = false;
+                    return;
+                }
 
                 try {
                     const response = await fetch(
@@ -275,6 +297,7 @@
                                 email,
                                 company,
                                 source: "Tool Tracker Page",
+                                turnstileToken: turnstileResponse,
                             }),
                         },
                     );
