SEO improvements: copyright dates, lazy loading, preconnect, sitemap, robots.txt, hidden H1

--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Preconnect for performance -->
+        <link rel="preconnect" href="https://cdn.tailwindcss.com" />
+        <link rel="preconnect" href="https://challenges.cloudflare.com" />
+        <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
+        <link rel="dns-prefetch" href="https://challenges.cloudflare.com" />
+
         <title>
             About PM4Subs | Built by Subcontractors, for Subcontractors
         </title>
@@ -689,7 +696,7 @@
         <!-- Footer -->
         <footer class="about-footer">
             <p>
-                &copy; 2025 PM4Subs. All rights reserved. |
+                &copy; 2026 PM4Subs. All rights reserved. |
                 <a href="/privacy/">Privacy Policy</a>
             </p>
             <p>
