--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Preconnect for performance -->
+        <link rel="preconnect" href="https://cdn.tailwindcss.com" />
+        <link rel="preconnect" href="https://challenges.cloudflare.com" />
+        <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
+        <link rel="dns-prefetch" href="https://challenges.cloudflare.com" />
+
         <title>Privacy Policy | PM4Subs</title>
         <meta
             name="description"
@@ -226,7 +233,7 @@
         <!-- Footer -->
         <footer>
             <div class="container">
-                <p>&copy; 2025 PM4Subs. All rights reserved.</p>
+                <p>&copy; 2026 PM4Subs. All rights reserved.</p>
                 <p class="mt-2">
                     <a href="/"
                         >Back to PM4Subs project management for
