--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Preconnect for performance -->
+        <link rel="preconnect" href="https://cdn.tailwindcss.com" />
+        <link rel="preconnect" href="https://challenges.cloudflare.com" />
+        <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
+        <link rel="dns-prefetch" href="https://challenges.cloudflare.com" />
+
         <title>Free Image Compressor for Contractors | PM4Subs</title>
         <meta
             name="description"
@@ -407,7 +414,7 @@
         <footer>
             <div class="container">
                 <p>
-                    &copy; 2025 PM4Subs. All rights reserved. |
+                    &copy; 2026 PM4Subs. All rights reserved. |
                     <a href="/privacy/">Privacy Policy</a>
                 </p>
                 <p class="mt-2">
